--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 
-	<script src="./01-ejercicio1.js"></script>
+	<!-- <script src="./01-ejercicio1.js"></script> -->
+	<script src="informacion.js"></script>
 </body>
 </html>
