--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
 	<!-- <script src="./01-ejercicio1.js"></script> -->
-	<script src="informacion.js"></script>
+	<!-- <script src="informacion.js"></script> -->
+	<script src="01-ejercicio2.js"></script>
 </body>
 </html>
