--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<!-- <script src="./01-ejercicio1.js"></script> -->
 	<!-- <script src="informacion.js"></script> -->
-	<script src="01-ejercicio2.js"></script>
+	<!-- <script src="01-ejercicio2.js"></script> -->
+	<script src="01-ejercicio3.js"></script>
 </body>
 </html>
